--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
 	<groupId>tduong.de</groupId>
 	<artifactId>noobchain</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
